--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    user-select: none;
 }
 
 html ,body{
@@ -27,7 +28,6 @@ p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
     font-size: 2rem;
-
 }
 
 #team{
@@ -60,4 +60,12 @@ button{
 
 button:active{
     scale: 0.9; 
+}
+
+h5{
+    color: white;
+    font-weight: 400;
+    font-size: 0.7rem;
+    position: fixed;
+    bottom: 10%;
 }
